# my-tools

./: .env.example  .gitignore  README.md  pyproject.toml
legacy-shell/: my-tools.sh
legacy-shell/file/: new-file-with-template.sh  zip.sh
legacy-shell/git/: auto.sh  branch-delete-local-remote.sh  branch-new-and-track.sh  copy-change.sh  gitlab-merge-request.sh  open-remote.sh
legacy-shell/maven/: mvn-simple.sh
legacy-shell/net/: my-ssh.sh
legacy-shell/utils/: common.sh
src/my_tools/: cli.py
src/my_tools/completion/: commands.py
src/my_tools/core/: completion.py  console.py  git_utils.py  installer.py  platform.py  process.py
src/my_tools/db/: batch_delete.py  commands.py  config_loader.py  csv_insert_sql.py  insert_sql_csv.py  mybatis_sql.py  task_runner.py
src/my_tools/file/: commands.py  concat.py  csv_render.py  excel_csv.py  json_tools.py  reverse.py  split.py
src/my_tools/git/: commands.py
src/my_tools/maven/: commands.py
src/my_tools/text/: case_tools.py  codec_tools.py  commands.py  wrap.py
src/my_tools/time_tools/: commands.py  converter.py
tests/: test_cli.py  test_completion.py  test_db_cli.py  test_db_csv_insert_sql.py  test_db_insert_sql_csv.py  test_db_mybatis_sql.py  test_file_commands.py  test_file_concat.py  test_file_csv_render.py  test_file_excel_csv.py  test_file_json_tools.py  test_file_reverse.py  test_file_split.py  test_git_commands.py  test_installer.py  test_maven_commands.py  test_text_case_tools.py  test_text_codec_tools.py  test_text_wrap.py  test_time_tools.py
