[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "my-tools"
version = "6.0.0"
description = "个人命令行工具集"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.1",
    "openpyxl>=3.1.5",
    "pyjson5>=2.0.1",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "questionary>=2.1.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
my-tools = "my_tools.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
